cmd/iptables/iptables示例_nat_libvirt_virbr0.txt
配置了libvirt后，将自动配置一个virbr0的虚拟网桥给vm提供NAT方式的网络接口，防火墙的配置如下，保存下来供参考：

# Generated by iptables-save v1.4.7 on Mon Oct 12 10:49:46 2015
*nat
:PREROUTING ACCEPT [365160:26624902]
:POSTROUTING ACCEPT [2345:167217]
:OUTPUT ACCEPT [2346:167545]
-A POSTROUTING -s 10.0.200.0/24 ! -d 10.0.200.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.0.200.0/24 ! -d 10.0.200.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.0.200.0/24 ! -d 10.0.200.0/24 -j MASQUERADE
COMMIT
# Completed on Mon Oct 12 10:49:46 2015
# Generated by iptables-save v1.4.7 on Mon Oct 12 10:49:46 2015
*mangle
:PREROUTING ACCEPT [424108:32720582]
:INPUT ACCEPT [70426:9734833]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [44319:64762595]
:POSTROUTING ACCEPT [44320:64762923]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Mon Oct 12 10:49:46 2015
# Generated by iptables-save v1.4.7 on Mon Oct 12 10:49:46 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [44319:64762595]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5900:5901 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -d 10.0.200.0/24 -o virbr0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.0.200.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Mon Oct 12 10:49:46 2015
